<resources>
    <string name="app_name">WallMartLogin</string>
    <string name="sign_in_title">Sign in to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="new_account">Create a new account</string>
    <string name="email">Email address (required)</string>
    <string name="password">Password (required)</string>
</resources>